# lf_scraper

./: .gitignore  Cargo.toml  README.md  config_template.yaml  key_template.yaml  langevin.html
ansible/: .gitignore  README.md  ansible.cfg  docker.yml  lf_scraper_build.yml  rust.yml  secrets.yml.template  surrealdb.yml
ansible/files/: surrealdb.service
ansible/inventory/: host.template
ansible/templates/: docker-compose.yml.j2
docker/: .gitignore  docker-file.yml  docker-memory.yml
docker/Dockerfile/: Dockerfile.aarch64  Dockerfile.arm  Dockerfile.armv7
old_embedded/: db_embedded.rs
old_embedded/utils/: error.rs  mod.rs  try_froms.rs
src/: config.rs  db.rs  lf_scraper.rs  main.rs  models.rs  scaper.rs  scraper.rs  specie.rs
src/utils/: prelude.rs
