[package]
name = "lf_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11.12", features = ["blocking", "cookies"] }
scraper = "0.16.0"
yaml-rust = "0.4.5"
serde = { version = "1.0.162", features = ["derive"] }
anyhow = "1.0.71"
tokio = { version = "1.28.0", features = ["full"] }
surrealdb = { version = "1.0.0-beta.9", features = ["kv-mem"] }
chrono = { version = "0.4.24", features = ["serde"] }
thiserror = "1.0.40"